# T-Sne

./: .gitignore  LICENSE  README.md  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py  test_functions.py
animatsne/: animatsne.py  pyproject.toml  readme-pypi.md  test_functions.py
animatsne.egg-info/: PKG-INFO  SOURCES.txt
animatsne/animatsne/: anim.py  animatsne.py  similarities.py
animatsne/animatsne.egg-info/: SOURCES.txt  requires.txt
animatsne/animatsne/animatsne.egg-info/: PKG-INFO  top_level.txt
animatsne/src/animatsne/: utils.py
animatsne/tests/: comparacion.py  test_functions.py  utils.py
mytsnelib/: distances.py  functions.py  metodos_pagina.py  similarities.py  utils.py
mytsnelib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: comparacion.py  test_functions.py
